# schedule-bot

./: Cargo.toml  README.md  main.py  s.json  schedule.json
src/: main.rs  schedule.rs  state.rs  utils.rs
