[package]
name = "schedule-bot"
version = "1.0.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde_json = {version = "1.0.138" }
chrono = { version = "0.4.39", features = ["unstable-locales"] }
serde = { version = "1.0.217" }